Requisitos obrigatorios - ok

--- a/style.css
+++ b/style.css
@@ -4,7 +4,11 @@
 }
 
 body {
-  background-color: aliceblue ;
+  background-color: aliceblue;
+}
+
+main {
+  margin-top: 50px;
 }
 
 #title {
@@ -15,33 +19,30 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-
+  margin: 20px auto;
 }
 
 .color {
-  border: 1px solid rgb(0,0,0);
+  border: 1px solid rgb(0, 0, 0);
   list-style-type: none;
   width: 30px;
   height: 30px;
 }
 
-.color:nth-last-of-type(4) {
-  background-color: rgb(0,0,0);
+#nav-box {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 20px auto;
 }
 
-.color:nth-last-of-type(3) {
-  background-color: blue;
+#clear-board {
+  background-color: #0d9678;
+  color: white;
 }
 
-.color:nth-last-of-type(2) {
-  background-color: red;
-}
-
-.color:nth-last-of-type(1) {
-  background-color: green;
-}
-
-#pixel-board, .board{
+#pixel-board,
+.board {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -49,8 +50,12 @@ body {
 
 .pixel {
   border: 1px solid black;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   width: 40px;
   height: 40px;
   list-style-type: none;
+}
+
+.selected:hover {
+  border: 2px solid lightgreen;
 }
