--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ main {
 
 #title {
   text-align: center;
+  color: #0d9678;
 }
 
 #color-palette {
@@ -24,7 +25,6 @@ main {
 
 .color {
   border: 1px solid rgb(0, 0, 0);
-  list-style-type: none;
   width: 30px;
   height: 30px;
 }
@@ -43,7 +43,7 @@ main {
 .nav-buttons {
   background-color: #0d9678;
   color: white;
-  margin: 5px;
+  margin: 2px;
   padding: 5px;
 }
 
@@ -56,9 +56,11 @@ main {
 
 .pixel {
   border: 1px solid black;
-  background-color: rgb(255, 255, 255);
   width: 40px;
   height: 40px;
+}
+
+li {
   list-style-type: none;
 }
 
