--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ main {
 #board-size {
   background-color: white;
   color: black;
+  width: 40px;
 }
 .nav-buttons {
   background-color: #0d9678;
@@ -47,7 +48,6 @@ main {
   padding: 5px;
 }
 
-#pixel-board,
 .board {
   display: flex;
   flex-direction: row;
@@ -56,6 +56,7 @@ main {
 
 .pixel {
   border: 1px solid black;
+  background-color: white;
   width: 40px;
   height: 40px;
 }
